--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="colorAccent">#03DAC5</color>
     <color name="transparent">#0003DAC5</color>
     <color name="black">#000000</color>
+    <color name="white">#ffffff</color>
     <color name="star">#FFC90E</color>
 </resources>
