--- a/app/src/main/res/layout/activity_main_hotels.xml
+++ b/app/src/main/res/layout/activity_main_hotels.xml
@@ -2,19 +2,19 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainHotels">
+        tools:context=".MainHotels"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/titol"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
             android:text="@string/titol_hotel"
             android:textColor="@color/black"
             android:textSize="40sp" />
@@ -22,14 +22,12 @@
             android:id="@+id/spinner"
             android:layout_width="fill_parent"
             android:layout_height="50dp"
-            android:layout_below="@id/titol"
             android:entries="@array/spinner_array"/>
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/primer"
+            android:id="@+id/primer_h"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/spinner"
             android:layout_margin="10dp"
             card_view:cardCornerRadius="5dp"
             card_view:cardElevation="2dp">
@@ -88,10 +86,9 @@
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/segon"
+            android:id="@+id/segon_h"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/primer"
             android:layout_margin="10dp"
             card_view:cardCornerRadius="5dp"
             card_view:cardElevation="2dp">
@@ -152,10 +149,9 @@
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/tercer"
+            android:id="@+id/tercer_h"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/segon"
             android:layout_margin="10dp"
             card_view:cardCornerRadius="5dp"
             card_view:cardElevation="2dp">
@@ -217,10 +213,9 @@
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/quart"
+            android:id="@+id/quart_h"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/tercer"
             android:layout_margin="10dp"
             card_view:cardCornerRadius="5dp"
             card_view:cardElevation="2dp">
@@ -281,10 +276,9 @@
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/cinque"
+            android:id="@+id/cinque_h"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/quart"
             android:layout_margin="10dp"
             card_view:cardCornerRadius="5dp"
             card_view:cardElevation="2dp">
@@ -345,10 +339,9 @@
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/sise"
+            android:id="@+id/sise_h"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/cinque"
             android:layout_margin="10dp"
             card_view:cardCornerRadius="5dp"
             card_view:cardElevation="2dp">
@@ -409,10 +402,9 @@
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/sete"
+            android:id="@+id/sete_h"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/sise"
             android:layout_margin="10dp"
             card_view:cardCornerRadius="5dp"
             card_view:cardElevation="2dp">
@@ -471,5 +463,5 @@
                     android:background="@color/transparent"/>
             </RelativeLayout>
         </androidx.cardview.widget.CardView>
-    </RelativeLayout>
+    </LinearLayout>
 </ScrollView>
