--- a/app/src/main/res/layout/activity_main_movies.xml
+++ b/app/src/main/res/layout/activity_main_movies.xml
@@ -7,7 +7,7 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     tools:context=".MainMovies"
     android:orientation="vertical"
-    android:background="@color/BLACK">
+    android:background="@color/WHITE">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
