--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,11 +7,12 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
     <style name="cardViewStyle">
-        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_margin">10dp</item>
         <item name="cardCornerRadius">5dp</item>
         <item name="cardElevation">2dp</item>
+        <item name="android:layout_gravity">center</item>
     </style>
     <style name="buttonStyle">
         <item name="android:layout_width">wrap_content</item>
@@ -20,13 +21,12 @@
         <item name="android:layout_marginTop">-20dp</item>
     </style>
     <style name="ratingStyle">
-        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_width">240dp</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:numStars">5</item>
         <item name="android:saveEnabled">true</item>
         <item name="android:scaleX">0.5</item>
         <item name="android:scaleY">0.5</item>
-        <item name="android:layout_alignParentEnd">true</item>
     </style>
     <style name="titleStyle">
         <item name="android:layout_width">wrap_content</item>
@@ -40,6 +40,7 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_alignParentEnd">true</item>
         <item name="android:layout_marginEnd">-5dp</item>
+        <item name="android:textColor">@color/black</item>
     </style>
 
 </resources>
