--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,8 +16,6 @@
     </style>
     <style name="buttonStyle">
         <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:background">@color/transparent</item>
         <item name="android:layout_marginTop">-20dp</item>
     </style>
     <style name="ratingStyle">
@@ -31,9 +29,9 @@
     <style name="titleStyle">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_alignParentEnd">true</item>
-        <item name="android:textColor">@color/black</item>
+        <item name="android:layout_gravity">center</item>
         <item name="android:textSize">20dp</item>
+        <item name="android:textColor">@color/black</item>
     </style>
     <style name="descriptionStyle">
         <item name="android:layout_width">200dp</item>
@@ -42,5 +40,13 @@
         <item name="android:layout_marginEnd">-5dp</item>
         <item name="android:textColor">@color/black</item>
     </style>
-
+    <style name="shadoweffect">
+        <item name="android:paddingLeft">4px</item>
+        <item name="android:paddingBottom">4px</item>
+        <item name="android:textColor">#000000</item>
+        <item name="android:textSize">25sp</item>
+        <item name="android:shadowDx">0</item>
+        <item name="android:shadowDy">0</item>
+        <item name="android:shadowRadius">10</item>
+    </style>
 </resources>
