--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,9 +14,17 @@
         <item name="cardElevation">2dp</item>
         <item name="android:layout_gravity">center</item>
     </style>
+    <style name="imgStyle">
+        <item name="android:layout_height">180dp</item>
+        <item name="android:layout_width">140dp</item>
+        <item name="android:layout_gravity">center</item>
+    </style>
     <style name="buttonStyle">
         <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginTop">-20dp</item>
+        <item name="android:layout_marginStart">10dp</item>
+        <item name="android:background">@color/transparent</item>
     </style>
     <style name="ratingStyle">
         <item name="android:layout_width">240dp</item>
